token/sec metrics added

--- a/templates/index.html
+++ b/templates/index.html
@@ -83,6 +83,11 @@
                     <div class="metric-value" id="output-length">-</div>
                     <div class="metric-label">characters</div>
                 </div>
+                <div class="metric-card">
+                    <div class="metric-label">Token Speed</div>
+                    <div class="metric-value" id="token-speed">-</div>
+                    <div class="metric-label">tokens/sec</div>
+                </div>
             </div>
             
             <div id="status"></div>
